カードを押したらカードが消えるカードが消えたら下からwindowが出てくるようにした

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 <body>
   <div class="container">
     <div class="topicList">
-      <p class="topic">ドントギブアップ</p>
+      <p class="topic jsBtn">好きなこと</p>
     </div>
   </div>
   <div id="modal">
+    <!-- <div claas="slideUP js-closeBtn">slideUPというクラス名をmodalの子どもとしてJSでつけたい</div> -->
   </div>
 </body>
 </html>
