--- a/index.html
+++ b/index.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
   <title>Shino</title>
-  <script defer src="js/app.js" ></script>
+  <script defer src="js/app.js"></script>
 </head>
+
 <body>
   <div class="container">
+    <!-- 全体の横幅(非レスポンシブ用) -->
     <div class="topicList">
-      <p class="topic jsBtn">好きなこと</p>
+      <p class="topic jsBtn">ボタン</p>
+    </div>
+    <!-- <div class="wrapper"> -->
+    <div id="modal">
+      <!-- <div claas="slideUP js-closeBtn">slideUPというクラス名をmodalの子どもとしてJSでつけたい</div> -->
     </div>
   </div>
-  <div id="modal">
-    <!-- <div claas="slideUP js-closeBtn">slideUPというクラス名をmodalの子どもとしてJSでつけたい</div> -->
-  </div>
+  <!-- </div> -->
 </body>
+
 </html>
