モーダルウィンドウの右上にcloseボタンをつけ、押すとモーダルがスライドダウンして画面外に出るゆおにした

--- a/index.html
+++ b/index.html
@@ -18,10 +18,16 @@
     </div>
     <!-- <div class="wrapper"> -->
     <div id="modal">
-      <!-- <div claas="slideUP js-closeBtn">slideUPというクラス名をmodalの子どもとしてJSでつけたい</div> -->
+      <!-- <div class="slideUp">
+        <button class="js-closeBtn"></button>
+      </div> -->
+      <!-- <div>カードたちもある</div> -->
     </div>
   </div>
   <!-- </div> -->
 </body>
 
 </html>
+
+<!-- どれをjsでやってどれを元から書いておくのかの基準がわからない -->
+<!-- コンテンツ(カードたち)はどこに入れる？ -->
