スライドダウンしたあとメッセージが戻るようにした

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="container">
     <!-- 全体の横幅(非レスポンシブ用) -->
     <div class="topicList">
-      <p class="topic jsBtn">ボタン</p>
+      <p class="topic">好きなこと</p>
     </div>
     <!-- <div class="wrapper"> -->
     <div id="modal">
