トピックとそれぞれの配列を組みあわせた

--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container style">
     <!-- 全体の横幅(非レスポンシブ用) -->
     <div class="topicList">
-      <p class="topic">好きなこと</p>
+      <p id="like" class="topic">好きなこととか。ものとか。</p>
+      <p id="dislike" class="topic">苦手なこととか。ものとか。</p>
+      <p id="hobby" class="topic">趣味とか。</p>
+      <p id="hello" class="topic">はじめまして？</p>
+      <p id="study" class="topic">勉強のこととか。</p>
+      <p id="want" class="topic">欲しいものとか。</p>
     </div>
     <!-- <div class="wrapper"> -->
     <div id="modal">
@@ -24,11 +29,8 @@
       <!-- <div>カードたちもある</div> -->
     </div>
   </div>
-  <div  class="maru">まる</div>
+  <!-- <div  class="maru">まる</div> -->
   <!-- </div> -->
 </body>
 
 </html>
-
-<!-- どれをjsでやってどれを元から書いておくのかの基準がわからない -->
-<!-- コンテンツ(カードたち)はどこに入れる？ -->
