closeBtnだけスクロールせず固定配置した

--- a/index.html
+++ b/index.html
@@ -23,10 +23,6 @@
     </div>
     <!-- <div class="wrapper"> -->
     <div id="modal">
-      <!-- <div class="slideUp">
-        <button class="js-closeBtn"></button>
-      </div> -->
-      <!-- <div>カードたちもある</div> -->
     </div>
   </div>
   <!-- <div  class="maru">まる</div> -->
@@ -34,3 +30,47 @@
 </body>
 
 </html>
+
+
+<!-- 115
+<div>
+
+</div>
+116
+<div class="wrapper">
+
+</div>
+117
+<div class="modal">
+  <div class="wrapper">
+
+  </div>
+</div>
+118
+<p>
+busu
+</p>
+120
+<p class="content">
+
+</p>
+122
+<p class="content">
+  配列〜〜〜
+</p>
+125
+<div class="wrapper">
+  <p class="content">
+    配列〜〜〜
+  </p>
+</div>
+<div class="wrapper">
+  <p class="content">
+    配列〜〜〜
+  </p>
+</div>
+<div class="wrapper">
+  <p class="content">
+    配列〜〜〜
+  </p>
+</div> -->
