--- a/index.html
+++ b/index.html
@@ -11,17 +11,16 @@
 </head>
 
 <body>
-  <div class="container style">
+  <div class="container bgi">
     <!-- 全体の横幅(非レスポンシブ用) -->
     <div class="topicList">
-      <p id="like" class="topic">好きなこととか。ものとか。</p>
-      <p id="dislike" class="topic">苦手なこととか。ものとか。</p>
-      <p id="hobby" class="topic">趣味とか。</p>
-      <p id="hello" class="topic">はじめまして？</p>
-      <p id="study" class="topic">勉強のこととか。</p>
-      <p id="want" class="topic">欲しいものとか。</p>
+      <p id="like" class="topic" tabindex="0">好きなこととか。ものとか。</p>
+      <p id="dislike" class="topic" tabindex="0">苦手なこととか。ものとか。</p>
+      <p id="hobby" class="topic" tabindex="0">趣味とか。</p>
+      <p id="hello" class="topic" tabindex="0">はじめまして？</p>
+      <p id="study" class="topic" tabindex="0">勉強のこととか。</p>
+      <p id="want" class="topic" tabindex="0">欲しいものとか。</p>
     </div>
-    <!-- <div class="wrapper"> -->
     <div id="modal">
     </div>
   </div>
@@ -31,46 +30,3 @@
 
 </html>
 
-
-<!-- 115
-<div>
-
-</div>
-116
-<div class="wrapper">
-
-</div>
-117
-<div class="modal">
-  <div class="wrapper">
-
-  </div>
-</div>
-118
-<p>
-busu
-</p>
-120
-<p class="content">
-
-</p>
-122
-<p class="content">
-  配列〜〜〜
-</p>
-125
-<div class="wrapper">
-  <p class="content">
-    配列〜〜〜
-  </p>
-</div>
-<div class="wrapper">
-  <p class="content">
-    配列〜〜〜
-  </p>
-</div>
-<div class="wrapper">
-  <p class="content">
-    配列〜〜〜
-  </p>
-</div> -->
