時間帯によって背景が変わるようにした

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
   <div class="container bgi">
     <!-- 全体の横幅(非レスポンシブ用) -->
     <div class="topicList">
-      <p id="like" class="topic" tabindex="0">好きなこととか。ものとか。</p>
-      <p id="dislike" class="topic" tabindex="0">苦手なこととか。ものとか。</p>
-      <p id="hobby" class="topic" tabindex="0">趣味とか。</p>
-      <p id="hello" class="topic" tabindex="0">はじめまして？</p>
-      <p id="study" class="topic" tabindex="0">勉強のこととか。</p>
-      <p id="want" class="topic" tabindex="0">欲しいものとか。</p>
+      <p id="like" class="topic" tabindex="0" data-anim-status="click" onclick="click()">好きなこととか。ものとか。</p>
+      <p id="dislike" class="topic" tabindex="0" data-anim-status="click" onclick="click()">苦手なこととか。ものとか。</p>
+      <p id="hobby" class="topic" tabindex="0" data-anim-status="click" onclick="click()">趣味とか。</p>
+      <p id="hello" class="topic" tabindex="0" data-anim-status="click" onclick="click()">はじめまして？</p>
+      <p id="study" class="topic" tabindex="0" data-anim-status="click" onclick="click()">勉強のこととか。</p>
+      <p id="want" class="topic" tabindex="0" data-anim-status="click" onclick="click()">欲しいものとか。</p>
     </div>
     <div id="modal">
     </div>
