連続クリックできないようにした

--- a/index.html
+++ b/index.html
@@ -11,22 +11,19 @@
 </head>
 
 <body>
-  <div class="container bgi">
+  <div class="container">
     <!-- 全体の横幅(非レスポンシブ用) -->
     <div class="topicList">
-      <p id="like" class="topic" tabindex="0" data-anim-status="click" onclick="click()">好きなこととか。ものとか。</p>
-      <p id="dislike" class="topic" tabindex="0" data-anim-status="click" onclick="click()">苦手なこととか。ものとか。</p>
-      <p id="hobby" class="topic" tabindex="0" data-anim-status="click" onclick="click()">趣味とか。</p>
-      <p id="hello" class="topic" tabindex="0" data-anim-status="click" onclick="click()">はじめまして？</p>
-      <p id="study" class="topic" tabindex="0" data-anim-status="click" onclick="click()">勉強のこととか。</p>
-      <p id="want" class="topic" tabindex="0" data-anim-status="click" onclick="click()">欲しいものとか。</p>
+      <p id="like" class="topic" data-anim-status="clickable">好きなこととか。ものとか。</p>
+      <p id="dislike" class="topic" data-anim-status="clickable">苦手なこととか。ものとか。</p>
+      <p id="hobby" class="topic" data-anim-status="clickable">趣味とか。</p>
+      <p id="hello" class="topic" data-anim-status="clickable">はじめまして？</p>
+      <p id="study" class="topic" data-anim-status="clickable">勉強のこととか。</p>
+      <p id="want" class="topic" data-anim-status="clickable">欲しいものとか。</p>
     </div>
     <div id="modal">
     </div>
   </div>
-  <!-- <div  class="maru">まる</div> -->
-  <!-- </div> -->
 </body>
-
 </html>
 
